--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>wxHOPR Airdrop - Claim Your Tokens</title>
+    <meta name="description" content="Claim your wxHOPR and xDai to use Gnosis VPN">
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cfp-funding-tool-ui</title>
+    <!-- Local fonts for privacy -->
+    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="fonts/fontawesome-free-6.0.0-web/css/all.min.css">
   </head>
   <body>
     <div id="root"></div>
